# spectrakit

./: .coverage.tsf-492-wpa-4-187.epfl.ch.96813.XttGXfbx  .gitattributes  .gitignore  .gitlab-ci.yml  AUTHORS.rst  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  example.ipynb  pyproject.toml  test.ipynb  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: Bug.md
.github/workflows/: build.yml  lint.yml  tests.yml
developer/: clean_dist_check.py
docs/: .gitignore  requirements.txt
docs/src/: conf.py  index.rst
docs/src/_static/: refs.bib
docs/src/api-documentation/: dielectricspectrum.rst  index.rst
docs/src/api-documentation/lib/: index.rst  math.rst  util.rst
docs/src/concepts-explanations/: general-design.rst  index.rst
examples/: GALLERY_HEADER.rst  flux_example.py  mdanalysis_workflow.py
src/spectrakit/: __init__.py  __main__.py  dielectricspectrum.py  dielectricspectrum_flux.py
src/spectrakit/lib/: math.py  preprocessing.py  util.py
src/spectrakit/modules/: __init__.py  dielectricspectrum.py
tests/: tests.py
tests/data/: __init__.py  dipole.gro  dipole.itp  lammps10water.data  spce.gro
tests/data/airwater/: .airwater.trr_offsets.npz  README.rst  airwater.gro  airwater.tpr  airwater.trr
tests/data/cntwater/: README.rst  cntwater.data  cntwater.gro  cntwater.xtc
tests/data/kineticenergy/: .nve.trr_offsets.npz  README.rst  nve.tpr  nve.trr
tests/data/mica/: .mica.xtc_offsets.npz  README.rst  index.ndx  mica.gro  mica.mdp  mica.tpr  mica.xtc  topol.top
tests/data/mica/ff/: forcefield.itp  mica.itp  tip4p_eps.itp
tests/data/salt_water/: salt_water.gro  salt_water.tpr
tests/data/slit_flow/: README.rst  slit_flow.gro
tests/data/water/: .water_two_frames.trr_offsets.npz  README.rst  water.gro  water_two_frames.trr
tests/lib/: test_math.py
